# cpp_structure_testing

./: .gitignore  CMakeLists.txt
hello_world/: CMakeLists.txt
